# Mesh-Generation-Framework

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  clean_temp.sh  configFile  install.sh
aux/: install_hdf5.sh
cmake/modules/: TargetDistclean.cmake
doc/: README.md
doc/doxy_binary/doxygen-1.8.13/: INSTALL  README
doc/doxy_binary/doxygen-1.8.13/html/: arch.html  autolink.html  changelog.html  commands.html  custcmd.html  customize.html  diagrams.html  docblocks.html  doxygen_usage.html  doxywizard_usage.html  external.html  extsearch.html  faq.html  features.html  formulas.html  grouping.html  htmlcmds.html  index.html  install.html  lists.html  markdown.html  output.html  pages.html  perlmod.html  perlmod_tree.html  preprocessing.html  searching.html  starting.html  tables.html  trouble.html  xmlcmds.html
doc/doxygen/HTML/: doxygen_entrydb_9869.tmp
doc/doxygen/HTML/html/: annotated.html  api__compat_8h_source.html  classclass__io.html  classclass__mesh.html  classdat__write.html  classes.html  classfruit.html  classfruit__util.html  classh5py__LOCAL_1_1__hl_1_1attrs_1_1AttributeManager-members.html  classh5py__LOCAL_1_1__hl_1_1attrs_1_1AttributeManager.html  classh5py__LOCAL_1_1__hl_1_1base_1_1CommonStateObject-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1CommonStateObject.html  classh5py__LOCAL_1_1__hl_1_1base_1_1Empty-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1Empty.html  classh5py__LOCAL_1_1__hl_1_1base_1_1HLObject-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1HLObject.html  classh5py__LOCAL_1_1__hl_1_1base_1_1ItemsViewHDF5-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1ItemsViewHDF5.html  classh5py__LOCAL_1_1__hl_1_1base_1_1MappingHDF5-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1MappingHDF5.html  classh5py__LOCAL_1_1__hl_1_1base_1_1MutableMappingHDF5-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1MutableMappingHDF5.html  classh5py__LOCAL_1_1__hl_1_1base_1_1ValuesViewHDF5-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1ValuesViewHDF5.html  classh5py__LOCAL_1_1__hl_1_1base_1_1__RegionProxy-members.html  classh5py__LOCAL_1_1__hl_1_1base_1_1__RegionProxy.html  classh5py__LOCAL_1_1__hl_1_1dataset_1_1AstypeContext-members.html  classh5py__LOCAL_1_1__hl_1_1dataset_1_1AstypeContext.html  classh5py__LOCAL_1_1__hl_1_1dataset_1_1CollectiveContext-members.html  classh5py__LOCAL_1_1__hl_1_1dataset_1_1CollectiveContext.html  classh5py__LOCAL_1_1__hl_1_1dataset_1_1Dataset-members.html  (+423 more)
doc/doxygen/HTML/latex/: annotated.tex  (+381 more)
references/: README.md
src/: CMakeLists.txt  MeshGeneration_Framework.f90  MeshGeneration_Framework.f90~  README.md  class_io_netcdf4.f90  class_mesh.f90  dependencies.txt
src/mesh_analysis/: CMake  CMake.txt  CMakeLists.txt  README.txt  a.out  grid.f90  mod.f90  skewness.f90  skewness_1cell.mod  skweness_1cell.f90  smfactor.f90  smooth.f90  test.f90
src/mesh_analysis/Main/: main.f90  mainprog_as_ratio.f90
src/mesh_analysis/Module/: READ_MAP.f90  astest_ahmed.f90  module_READ_MAP.f90  module_as_ratio.f90  module_as_ratio.f90~  module_getcells.f90  module_mod.f90  module_project.f90  module_ratio_ahmed.f90  module_ratio_ahmed.f90~  module_skewness_1cell.f90  module_smfactor.f90  module_smooth.f90  ratio_ahmed.f90  skweness_1cell.f90  smfactor.f90  smooth.f90
src/mesh_analysis/project/: astest_ahmed.f90  project.f90~  ratio_ahmed.f90
src/mesh_analysis/test_case/: READ_MAP.f90  precision.mod  read_map.mod  skweness_1cell.f90
src/mesh_create/: README.md
src/mesh_create/MAPPING_DRASHTI/: READ_MAP.f90
src/mesh_create/meshing_alvaro/: Makefile  a.out  bibliography.txt  mesh.f90  module_mesh.f90  module_read_file.f90  new2.f90  newton.f90  newtonmod.mod  project.f90
src/mesh_create/read_akshay/: CMakeLists.txt  module_precision.f90  module_read_file.f90  module_read_file1.f90  newton_module.f90  project.f90  raw_mesh.data  read.f90  read_file.f90  read_file_module.mod  test1.f90
src/mesh_create/rectangle-mesh/: mesh_rectangle.f90
src/mesh_create/rectmesh_drashti/: module_rectmesh.f90  raw_mesh.data  test_rectmesh.f90
src/mesh_formats/: README.md
src/mesh_formats/csv/: csv_read.f90  csvaoutput.csv  module_csv_read.f90  module_csv_write.f90  test.f90
src/mesh_formats/dat/: dat_read.f90  dat_write.f90  module_dat_read.f90  module_dat_write.f90  test.f90  trial1.f90
src/mesh_formats/hdf/: HDF_test.f90  HDF_test.py  HDF_test_v1.2.py  HDF_test_v1.3.py  data.h5  mesh.hdf5  mesh_v2.hdf5  raw_mesh.data  test1.hdf  test2.hdf
src/mesh_formats/hdf/hdfql-1.4.0/: LICENSE.txt  README.txt  RELEASE.txt
src/mesh_formats/hdf/hdfql-1.4.0/example/: HDFqlExample.c  HDFqlExample.cpp  HDFqlExample.cs  HDFqlExample.f90  HDFqlExample.java  HDFqlExample.py
src/mesh_formats/hdf/hdfql-1.4.0/include/: HDFql.h  HDFql.hpp
src/mesh_formats/hdf/hdfql-1.4.0/wrapper/csharp/: HDFql.cs  HDFqlCursor.cs  HDFqlPINVOKE.cs
src/mesh_formats/hdf/hdfql-1.4.0/wrapper/fortran/: hdfql.mod
src/mesh_formats/hdf/hdfql-1.4.0/wrapper/java/: HDFql.java  HDFqlConstants.java  HDFqlCursor.java  HDFqlJNI.java
src/mesh_formats/hdf/hdfql-1.4.0/wrapper/python/3.5/: HDFql.py
src/mesh_formats/hdf5/: README.md  compile_module.sh  compilefile.sh  hdf5write.f90  hdftest.f90  mesh.h5  module_hdf5write.f90  module_hdfwrite.f90  modulehdf5r.f90
src/mesh_formats/hdf5_io/: CMakeLists.txt  compilefile.sh  data  hdf5_test.f90  hdf5write.f90  install_hdf5.sh  mesh.h5  modulehdf5r.f90
src/mesh_formats/vtk/: module_vtk_read.f90  module_vtk_write.f90  puvw_data.vtk  test.f90  test1.f90  vtk_read.f90  vtk_write.f90  vtkoutput.vtk
src/mesh_formats/vtk/Bipin/: digit_to_ch.f90  get_unit.f90  i4_to_s_left.f90  timestamp.f90  vtk_puvw_write.f90
src/mesh_formats/vtk/Diana/: main.f90  test01.f90
src/mesh_formats/vtk/cylinder_ex/: CMakeLists.txt
src/mesh_formats/vtkformat/: vtk_write.f90
tests/: CMakeLists.txt  TriangleColoredPoints.vtp  driver_hdf_test.f90  final_meshgentest.f90  module_mesh.f90  module_newton.f90  test_as_ratio.f90~  test_hdf.f90  test_read.f90  test_skewness.f90
tests/fruit/: fruit.f90  fruit_util.f90  test_io.f90  test_mesh.f90
(+98 files in other folders)
